<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_result_calculator"
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_padding"
            android:text="@string/tampilan_awal"
            android:textColor="@android:color/black"
            android:textAlignment="textEnd"
            android:maxLines="1"
            android:scrollbars="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="5"
            app:layout_constraintTop_toBottomOf="@id/text_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_float"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/koma"
                android:onClick="onDecimal"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_start"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/kurung_buka"
                android:onClick="onBreaketStart"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>
            <Button
                android:id="@+id/btn_end"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/kurung_tutup"
                android:onClick="onBreaketEnd"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>
            <Button
                android:id="@+id/btn_add"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/pertambahan"
                android:onClick="onOperator"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_yellow"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_1"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:onClick="onDigit"
                android:text="@string/angka_1"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_2"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/angka_2"
                android:onClick="onDigit"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_3"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/angka_3"
                android:onClick="onDigit"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/pengurangan"
                android:onClick="onOperator"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_yellow"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_4"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/angka_4"
                android:onClick="onDigit"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_5"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/angka_5"
                android:onClick="onDigit"
                android:layout_columnSpan="1"
                android:textSize="@dimen/textSize_button"
                android:background="@drawable/background_button_gray"/>

            <Button
                android:id="@+id/btn_6"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/angka_6"
                android:onClick="onDigit"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_times"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/perkalian"
                android:onClick="onOperator"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_yellow"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_7"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/angka_7"
                android:onClick="onDigit"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_8"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/angka_8"
                android:onClick="onDigit"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_9"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/angka_9"
                android:onClick="onDigit"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_div"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/div"
                android:onClick="onOperator"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_yellow"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_clearAll"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/clear"
                android:onClick="onClear"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_yellow"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/delete"
                android:onClick="onDelete"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_yellow"
                android:textSize="@dimen/textSize_button" />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/angka_nol"
                android:onClick="onDigit"
                android:layout_columnSpan="1"
                android:background="@drawable/background_button_gray"
                android:textSize="@dimen/textSize_button"/>

            <Button
                android:id="@+id/btn_equals"
                android:layout_width="@dimen/button_calculator"
                android:layout_height="@dimen/button_calculator"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/equals"
                android:onClick="onEqual"
                android:layout_gravity="fill_horizontal"
                android:background="@drawable/background_button_green"
                android:textSize="@dimen/textSize_button"/>
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>